Fixes to builds