@@ -10,7 +10,7 @@
 
     <groupId>com.FirstStory</groupId>
     <artifactId>FirstStory</artifactId>
-    <version>${first.oracle.version}</version>
+    <version>${first.story.version}</version>
     <packaging>pom</packaging>
 
     <name>First Story</name>
@@ -21,13 +21,21 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>12</maven.compiler.source>
         <maven.compiler.target>12</maven.compiler.target>
-        <first.oracle.version>0.5-SNAPSHOT</first.oracle.version>
+        <first.story.version>0.1-SNAPSHOT</first.story.version>
         <lwjgl.version>3.1.6</lwjgl.version>
         <joml.version>1.9.11</joml.version>
     </properties>
     <build>
         <pluginManagement>
             <plugins>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-surefire-plugin</artifactId>
+                    <version>3.0.0-M1</version>
+                    <configuration>
+                        <argLine>--enable-preview</argLine>
+                    </configuration>
+                </plugin>
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-compiler-plugin</artifactId>
@@ -58,7 +66,14 @@
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-javadoc-plugin</artifactId>
-                    <version>3.0.0-M1</version>
+                    <version>3.0.1</version>
+                    <configuration>
+                        <additionalJOptions>
+                            <additionalJOption>--enable-preview </additionalJOption>
+                            <additionalJOption>-source</additionalJOption>
+                            <additionalJOption>12</additionalJOption>
+                        </additionalJOptions>
+                    </configuration>
                     <executions>
                         <execution>
                             <id>attach-javadocs</id>
@@ -109,6 +124,7 @@
             </activation>
             <properties>
                 <lwjgl.natives>natives-windows</lwjgl.natives>
+                <!--<lwjgl.natives>natives-linux</lwjgl.natives>-->
             </properties>
         </profile>
     </profiles>
@@ -239,7 +255,6 @@
                 <artifactId>jackson-core</artifactId>
                 <version>2.9.7</version>
             </dependency>
-
             <dependency>
                 <groupId>org.easymock</groupId>
                 <artifactId>easymock</artifactId>
